# mini-vps-platform

./: .ansible-lint  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ansible/: playbook.yml
ansible/tasks/: base_images.yml  images_pool.yml  libvirtd.yml  network.yml  ovs.yml  packages.yml  seeds_dir.yml  segment_network.yml  ssh_key.yml
ansible/templates/: images-pool.xml.j2  minivps-dnsmasq.conf.j2  minivps-dnsmasq.service.j2  minivps-ovs-net.service.j2  minivps-ovs-net.sh.j2  nat-segment.xml.j2  ovs-segment.xml.j2  ovs-segments.flows.j2
ansible/vars/: guest_images.yml  network_segments.yml
docs/: dns-registration.md  guest-os.md  startup-scripts.md
mini_vps/: __init__.py  __main__.py  api.py  cli.py  config.py  dns_registration.py  exporter.py  lifecycle.py  manager.py  resources.py  spec.py  startup_scripts.py  vm-spec.yaml
monitoring/grafana/dashboards/: minivps-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
tests/: conftest.py  test_api.py  test_cli.py  test_dns_registration.py  test_exporter.py  test_lifecycle.py  test_manager.py  test_resources.py  test_spec.py  test_startup_scripts.py
