[project]
name = "mini-vps-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "libvirt-python==12.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.49.0",
]

[tool.setuptools.package-data]
mini_vps = ["*.yaml"]

[dependency-groups]
dev = ["ruff>=0.15.18"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]
ignore = [
    "D105", # magic method の docstring は省略可
    "D107", # __init__ の docstring は省略可
    "D415", # 日本語句点「。」を ASCII period と同等に扱うため
]

[tool.ruff.lint.pydocstyle]
convention = "google"
